# base64

./: .gitignore  Cargo.toml  TODO
bench/: .gitignore  benchmark.sh  benchmark_base32.sh  benchmark_base64.sh
chrono/decode/: .gitignore  chronologer.yaml
chrono/encode/: chronologer.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: b32_coreutils_comparison_target.rs  b32_line_length_target.rs  b32_roundtrip_target.rs  b64_coreutils_comparison_target.rs  b64_line_length_target.rs  b64_roundtrip_target.rs  coreutils_comparison_target.rs  line_length_target.rs  roundtrip_target.rs
src/: base32.rs  base64.rs  common.rs  lib.rs  main.rs
tests/: test.rs  test_base32.rs  test_base64.rs
