[package]
name = "base64"
version = "0.1.0"
authors = ["Justin Dubs <jtdubs@gmail.com>"]
license = "MIT"
edition = "2021"
description = "GNU-coreutils-compatible base64 encoder and decoder"

[lib]
name = "base_util"
path = "src/lib.rs"
test = false
bench = false

[dependencies]
clap = "2.34.0"

[[bin]]
name = "base64"
path = "src/bin/base64.rs"

[[bin]]
name = "base32"
path = "src/bin/base32.rs"
